For A4 print page number in the inner, ranges --- outer margins

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -384,12 +384,18 @@
 
 \fancyhead{}
 \fancyfoot{}
-\tunemarkuptwo{pgcrownq}{%
-\fancyhead[LE,RO]{\bibheadfont\vs@range}
-\fancyhead[RE,LO]{\bibheadfont\bibheadpagesize\thepage}
-}{%
+
 \fancyhead[L]{\bibheadfont\vs@range}
 \fancyhead[R]{\bibheadfont\bibheadpagesize\thepage}
+
+\tunemarkup{pgcrownq}{%
+\fancyhead[LE,RO]{\bibheadfont\vs@range}
+\fancyhead[RE,LO]{\bibheadfont\bibheadpagesize\thepage}
+}
+
+\tunemarkup{pgafour}{%
+\fancyhead[LE,RO]{\bibheadfont\vs@range}
+\fancyhead[RE,LO]{\bibheadfont\bibheadpagesize\thepage}
 }
 
 \tunemarkuptwo{pgkoboaurahd}{%
