Explain the 860 "magic" number.

--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -64,7 +64,7 @@
 \vs p042 4:11 The increase of mass in matter is equal to the increase of energy divided by the square of the velocity of light. \begin{equation}\Delta m = {\Delta E \over c^2}\end{equation} In a dynamic sense the work which resting matter can perform is equal to the energy expended in bringing its parts together from Paradise minus the resistance of the forces overcome in transit and the attraction exerted by the parts of matter on one another.
 \vs p042 4:12 \pc The existence of pre\hyp{}electronic forms of matter is indicated by the two atomic weights of lead. The lead of original formation weighs slightly more than that produced through uranium disintegration by way of radium emanations\fnst{\textbf{radium emanations}, the archaic term for the chemical element radon ($^{222}_{86}$Rn), which is the indirect decay product (via radium $^{226}_{88}$Ra) of Uranium-238.}; and this difference in atomic weight represents the actual loss of energy in the atomic breakup.\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[width=\columnwidth]{../urantia-pictures/Uranium-Decay-Series.jpg}\caption{Uranium-238 decay series ending in Lead-206}\end{figure}}
 \vs p042 4:13 \pc The relative integrity of matter is assured by the fact that energy can be absorbed or released only in those exact amounts which Urantia scientists have designated quanta. This wise provision in the material realms serves to maintain the universes as going concerns.
-\vs p042 4:14 The quantity of energy taken in or given out when electronic or other positions are shifted is always a “quantum” or some multiple thereof, but the vibratory or wavelike behaviour of such units of energy is wholly determined by the dimensions of the material structures concerned. Such wavelike energy ripples are 860 times the diameters of the ultimatons, electrons, atoms, or other units thus performing. The never\hyp{}ending confusion attending the observation of the wave mechanics of quantum behaviour is due to the superimposition of energy waves: Two crests can combine to make a double\hyp{}height crest, while a crest and a trough may combine, thus producing mutual cancellation.
+\vs p042 4:14 The quantity of energy taken in or given out when electronic or other positions are shifted is always a “quantum” or some multiple thereof, but the vibratory or wavelike behaviour of such units of energy is wholly determined by the dimensions of the material structures concerned. Such wavelike energy ripples are 860\fnst{\textbf{860}, This ``magic number'' is explained by Sir James Jeans in his book ``The Universe Around Us'' (1930, p.) as follows: the energy needed to separate two charges $+e$ and $-e$ apart at a distance $r$ is $e^2/{4\pi\epsilon_0 r}$; equating it to the energy of photon $h\nu$ we have $h\nu=hc\lambda = e^2/{4\pi\epsilon_0 r}$, whence we obtain $\lambda/r = 4\pi\epsilon_0 hc/e^2 \approx 861.02$.} times the diameters of the ultimatons, electrons, atoms, or other units thus performing. The never\hyp{}ending confusion attending the observation of the wave mechanics of quantum behaviour is due to the superimposition of energy waves: Two crests can combine to make a double\hyp{}height crest, while a crest and a trough may combine, thus producing mutual cancellation.
 \usection{5.\bibnobreakspace Wave\hyp{}Energy Manifestations}
 \vs p042 5:1 In the superuniverse of Orvonton there are 100 octaves of wave energy. Of these 100 groups of energy manifestations, 64 are wholly or partially recognized on Urantia. The sun’s rays constitute 4 octaves in the superuniverse scale, the visible rays embracing a single octave, number 46\fnst{\textbf{the visible rays embracing a single octave, number 46}, The wavelength of the visible light ranges between 400\,nm and 780\,nm, therefore the base frequency used for calibrating the spectrum is 11\,Hz: $\nu_{max}(n) = 11 \times 2^n$, where $\nu_{max}$ is the top frequency (in Hz) of the $n^{th}$ octave.} in this series. The ultraviolet group comes next, while 10 octaves up are the X\hyp{}rays, followed by the γ-rays\fnc{\textbf{γ-rays}, 1955 text: \bibtextul{Y rays}.} of radium. 32 octaves above the visible light of the sun are the outer\hyp{}space energy rays so frequently commingled with their associated highly energized minute particles of matter. Next downward from visible sunlight appear the infrared rays, and 30 octaves below are the radio transmission group.
 \vs p042 5:2 \pc Wavelike energy manifestations --- from the standpoint of XX century Urantia scientific enlightenment --- may be classified into the following 10 groups:
