Change some pictures to private mode

--- a/tex/p045.tex
+++ b/tex/p045.tex
@@ -4,7 +4,7 @@
 \vs p045 0:2 The 7 mansion worlds are the 7 subsatellites of transition world number one.
 \vs p045 0:3 This entire system of 57 architectural worlds is independently lighted, heated, watered, and energized by the co\hyp{}ordination of the Satania Power Centre and the Master Physical Controllers in accordance with the established technique of the physical organization and arrangement of these specially created spheres. They are also physically cared for and otherwise maintained by the native spornagia.
 \usection{1.\bibnobreakspace Transitional Culture Worlds}
-\vs p045 1:1 The 7 major worlds swinging around Jerusem are generally known as the transitional culture spheres. Their rulers are designated from time to time by the Jerusem supreme executive council. These spheres are numbered and named as follows:\tunemarkup{pictures}{\begin{figure}[H]\centering\includegraphics[angle=90,width=\columnwidth]{../urantia-pictures/JERUSEM_700.jpg}\caption{Jerusem by Gary~Tonge}\end{figure}}
+\vs p045 1:1 The 7 major worlds swinging around Jerusem are generally known as the transitional culture spheres. Their rulers are designated from time to time by the Jerusem supreme executive council. These spheres are numbered and named as follows:\tunemarkup{private}{\begin{figure}[H]\centering\includegraphics[angle=90,width=\columnwidth]{../urantia-pictures/JERUSEM_700.jpg}\caption{Jerusem by Gary~Tonge}\end{figure}}
 \vs p045 1:2 \pc \bibemph{Number 1. The Finaliter World.} This is the headquarters of the finaliter corps of the local system and is surrounded by the receiving worlds, the 7 mansion worlds, dedicated so fully to the scheme of mortal ascension. The finaliter world is accessible to the inhabitants of all 7 mansion worlds. Transport seraphim carry ascending personalities back and forth on these pilgrimages, which are designed to cultivate their faith in the ultimate destiny of transition mortals. Although the finaliters and their structures are not ordinarily perceptible to morontia vision, you will be more than thrilled, from time to time, when the energy transformers and the Morontia Power Supervisors enable you momentarily to glimpse these high spirit personalities who have actually completed the Paradise ascension, and who have returned to the very worlds where you are beginning this long journey, as the pledge of assurance that you may and can complete the stupendous undertaking. All mansion world sojourners go to the finaliter sphere at least once a year for these assemblies of finaliter visualization.
 \vs p045 1:3 \pc \bibemph{Number 2. The Morontia World.} This planet is the headquarters of the supervisors of morontia life and is surrounded by the 7 spheres whereon the morontia chiefs train their associates and helpers, both morontia beings and ascending mortals.
 \vs p045 1:4 In passing through the 7 mansion worlds, you will also progress through these cultural and social spheres of increasing morontia contact. When you advance from the first to the second mansion world, you will become eligible for a visitor’s permit to transitional headquarters number two, the morontia world, and so on. And when present on any one of these six cultural spheres, you may, on invitation, become a visitor and observer on any of the 7 surrounding worlds of associated group activities.
