--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -18,6 +18,7 @@ INTRODUCTION
 \tunemarkup{pgafour}{\fontsize{17}{20}\selectfont}
 \tunemarkup{pgnexus7}{\fontsize{16}{18}\selectfont}
 \tunemarkup{pgkoboaurahd}{\fontsize{17}{21}\selectfont}
+\tunemarkup{pgcrownq}{\fontsize{14}{17}\selectfont}
 
 \bibemph{The British Study Edition of The Urantia Papers} has the following main features:
 
