Split A4 printed book into 2 volumes

--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -80,8 +80,6 @@
 \upapertitle{60}{Urantia During the Early Land-Life Era}{Life Carrier}{p60}
 \upapertitle{61}{The Mammalian Era on Urantia}{Life Carrier}{p61}
 \upapertitle{62}{The Dawn Races of Early Man}{Life Carrier}{p62}
-\fi
-\ifvolii
 \ifmultivol\tunemarkup{pgcrownq}{\upartheadercont{2}\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{63}{The First Human Family}{Life Carrier}{p63}
 \upapertitle{64}{The Evolutionary Races of Colour}{Life Carrier}{p64}
@@ -119,13 +117,15 @@
 \upapertitle{94}{The Melchizedek Teachings in the Orient}{Melchizedek}{p94}
 \upapertitle{95}{The Melchizedek Teachings in the Levant}{Melchizedek}{p95}
 \upapertitle{96}{Yahweh — God of the Hebrews}{Melchizedek}{p96}
+\fi
+\ifvolii
+\ifmultivol\tunemarkup{pgafour}{\upartheadercont{3}\upapertitleheader{Paper}{Author}{Page}}\fi
 \ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{97}{Evolution of the God Concept among the Hebrews}{Melchizedek}{p97}
 \upapertitle{98}{The Melchizedek Teachings in the Occident}{Melchizedek}{p98}
 \upapertitle{99}{The Social Problems of Religion}{Melchizedek}{p99}
 \upapertitle{100}{Religion in Human Experience}{Melchizedek}{p100}
 \upapertitle{101}{The Real Nature of Religion}{Melchizedek}{p101}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{102}{The Foundations of Religious Faith}{Melchizedek}{p102}
 \upapertitle{103}{The Reality of Religious Experience}{Melchizedek}{p103}
 \upapertitle{104}{Growth of the Trinity Concept}{Melchizedek}{p104}
@@ -154,9 +154,8 @@
 \upapertitle{125}{Jesus at Jerusalem}{Midwayer Commission}{p125}
 \upapertitle{126}{The Two Crucial Years}{Midwayer Commission}{p126}
 \upapertitle{127}{The Adolescent Years}{Midwayer Commission}{p127}
+\ifmultivol\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{128}{Jesus’ Early Manhood}{Midwayer Commission}{p128}
-\fi
-\ifvoliii
 \ifmultivol\tunemarkup{pgcrownq}{\upartheadercont{3}\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{129}{The Later Adult Life of Jesus}{Midwayer Commission}{p129}
 \upapertitle{130}{On the Way to Rome}{Midwayer Commission}{p130}
@@ -165,7 +164,6 @@
 \upapertitle{133}{The Return from Rome}{Midwayer Commission}{p133}
 \upapertitle{134}{The Transition Years}{Midwayer Commission}{p134}
 \upapertitle{135}{John the Baptist}{Midwayer Commission}{p135}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{136}{Baptism and the Forty Days}{Midwayer Commission}{p136}
 \upapertitle{137}{Tarrying Time in Galilee}{Midwayer Commission}{p137}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
@@ -197,6 +195,7 @@
 \ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{163}{Ordination of the Seventy at Magadan}{Midwayer Commission}{p163}
 \upapertitle{164}{At the Feast of Dedication}{Midwayer Commission}{p164}
+\ifmultivol\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{165}{The Perean Mission Begins}{Midwayer Commission}{p165}
 \upapertitle{166}{Last Visit to Northern Perea}{Midwayer Commission}{p166}
 \upapertitle{167}{The Visit to Philadelphia}{Midwayer Commission}{p167}
@@ -206,7 +205,6 @@
 \upapertitle{170}{The Kingdom of Heaven}{Midwayer Commission}{p170}
 \upapertitle{171}{On the Way to Jerusalem}{Midwayer Commission}{p171}
 \upapertitle{172}{Going into Jerusalem}{Midwayer Commission}{p172}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{173}{Monday in Jerusalem}{Midwayer Commission}{p173}
 \upapertitle{174}{Tuesday Morning in the Temple}{Midwayer Commission}{p174}
 \upapertitle{175}{The Last Temple Discourse}{Midwayer Commission}{p175}
