--- a/tex/title.tex
+++ b/tex/title.tex
@@ -58,9 +58,9 @@ Edited by Tigran Aivazian\\[2ex]
 }%
 \ifmultivol
 \LARGE\bfseries\itshape
-\ifvoli Volume I: Foreword \&\ Papers 1--62\\\fi
-\ifvolii Volume II: Papers 63--128\\\fi
-\ifvoliii Volume III: Papers 129--196\\\fi
+\ifvoli Volume I: Foreword \&\ Papers 1--96\\\fi
+\ifvolii Volume II: Papers 97--196\\\fi
+%\ifvoliii Volume III: Papers 129--196\\\fi
 \fi
 \vspace*{\stretch{0.6}}
 \titlesepbig\\
