Use Garamond by default fo 7in build

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -19,7 +19,7 @@
 \RequirePackage[\tunemarkup{pgkindledx}{doublecol,}\tunemarkup{pgafour}{doublecol,}\tunemarkup{pgcrownq}{doublecol,}parvs]{ubook}
 
 % various font families
-%\tunemarkuptag{garamond}
+\tunemarkuptag{garamond}
 %\tunemarkuptag{goudy}
 %\tunemarkuptag{minionpro}
 %\tunemarkuptag{academy}
@@ -27,7 +27,7 @@
 %\tunemarkuptag{oldstandard}
 %\tunemarkuptag{gentium}
 %\tunemarkuptag{bookman}
-\tunemarkuptag{arno}
+%\tunemarkuptag{arno}
 %\tunemarkuptag{century}
 %\tunemarkuptag{cambria}
 %\tunemarkuptag{agora}
@@ -93,8 +93,8 @@
 \def\urantiaexplfont{Garamond Premier Pro Medium Italic}
 \def\pc{{\fontsize{10}{10}\selectfont\P}\kern2pt}
 \renewcommand{\bibheadfont}{\headingfont\fontsize{7.7}{7.7}\selectfont}
-\newcommand{\bibbookend}{\fontsize{18}{21}\selectfont}
-\newcommand{\urantiamainfontsize}{18/21}
+\newcommand{\bibbookend}{\fontsize{17}{20}\selectfont}
+\newcommand{\urantiamainfontsize}{17/20}
 }
 
 \tunemarkup{goudy}{%
