Change the subtitles font to match the original layout.

--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -12,7 +12,7 @@
 \vs p042 1:7 Force derived from self\hyp{}existent Deity is in itself ever existent. Force\hyp{}energy is imperishable, indestructible; these manifestations of the Infinite may be subject to unlimited transmutation, endless transformation, and eternal metamorphosis; but in no sense or degree, not even to the slightest imaginable extent, could they or ever shall they suffer extinction. But energy, though springing from the Infinite, is not infinitely manifest; there are outer limits to the presently conceived master universe.
 \vs p042 1:8 Energy is eternal but not infinite; it ever responds to the all\hyp{}embracing grasp of Infinity. Forever force and energy go on; having gone out from Paradise, they must return thereto, even if age upon age be required for the completion of the ordained circuit. That which is of Paradise Deity origin can have only a Paradise destination or a Deity destiny.
 \vs p042 1:9 \pc And all this confirms our belief in a circular, somewhat limited, but orderly and far\hyp{}flung universe of universes. If this were not true, then evidence of energy depletion at some point would sooner or later appear. All laws, organizations, administration, and the testimony of universe explorers --- everything points to the existence of an infinite God but, as yet, a finite universe, a circularity of endless existence, well\hyp{}nigh limitless but, nevertheless, finite in contrast with infinity.
-\usection{2.\bibnobreakspace Universal Nonspiritual Energy Systems\\(Physical Energies)}
+\usection{2.\bibnobreakspace Universal Nonspiritual Energy Systems\\(\subtitlefont Physical Energies)}
 \vs p042 2:1 It is indeed difficult to find suitable words in the English language whereby to designate and wherewith to describe the various levels of force and energy --- physical, mindal, or spiritual. These narratives cannot altogether follow your accepted definitions of force, energy, and power. There is such paucity of language that we must use these terms in multiple meanings. In this paper, for example, the word \bibemph{energy} is used to denote all phases and forms of phenomenal motion, action, and potential, while \bibemph{force} is applied to the pregravity, and \bibemph{power} to the postgravity, stages of energy.
 \vs p042 2:2 I will, however, endeavour to lessen conceptual confusion by suggesting the advisability of adopting the following classification for cosmic force, emergent energy, and universe power --- physical energy:
 \vs p042 2:3 \ublistelem{1.}\bibnobreakspace \bibemph{Space potency.} This is the unquestioned free space presence of the Unqualified Absolute. The extension of this concept connotes the universe force\hyp{}space potential inherent in the functional totality of the Unqualified Absolute, while the intension of this concept implies the totality of cosmic reality --- universes --- which emanated eternitywise from the never\hyp{}beginning, never\hyp{}ending, never\hyp{}moving, never\hyp{}changing Isle of Paradise.
@@ -116,7 +116,7 @@
 \vs p042 9:3 This sevenfold persistence of creative constitution is exhibited in the chemical domains as a recurrence of similar physical and chemical properties in segregated periods of 7 when the basic elements are arranged in the order of their atomic weights. When the Urantia chemical elements are thus arranged in a row, any given quality or property tends to recur by sevens. This periodic change by sevens recurs diminishingly and with variations throughout the entire chemical table, being most markedly observable in the earlier or lighter atomic groupings. Starting from any one element, after noting some one property, such a quality will change for six consecutive elements, but on reaching the eighth, it tends to reappear, that is, the eighth chemically active element resembles the first, the ninth the second, and so on. Such a fact of the physical world unmistakably points to the sevenfold constitution of ancestral energy and is indicative of the fundamental reality of the sevenfold diversity of the creations of time and space. Man should also note that there are 7 colours in the natural spectrum.
 \vs p042 9:4 But not all the suppositions of natural philosophy are valid; for example, the hypothetical ether, which represents an ingenious attempt of man to unify his ignorance of space phenomena. The philosophy of the universe cannot be predicated on the observations of so\hyp{}called science. If such a metamorphosis could not be seen, a scientist would be inclined to deny the possibility of developing a butterfly out of a caterpillar.
 \vs p042 9:5 Physical stability associated with biologic elasticity is present in nature only because of the well\hyp{}nigh infinite wisdom possessed by the Master Architects of creation. Nothing less than transcendental wisdom could ever design units of matter which are at the same time so stable and so efficiently flexible.
-\usection{10.\bibnobreakspace Universal Nonspiritual Energy Systems\\(Material Mind Systems)}
+\usection{10.\bibnobreakspace Universal Nonspiritual Energy Systems\\(\subtitlefont Material Mind Systems)}
 \vs p042 10:1 The endless sweep of relative cosmic reality,\fnc{cosmic \bibtextul{reality} from \ldots\ \bibexpl{Comma inserted.}} from the absoluteness of Paradise monota to the absoluteness of space potency, is suggestive of certain evolutions of relationship in the nonspiritual realities of the First Source and Centre --- those realities which are concealed in space potency, revealed in monota, and provisionally disclosed on intervening cosmic levels. This eternal cycle of energy, being circuited in the Father of universes, is absolute and, being absolute, is expansile in neither fact nor value; nevertheless the Primal Father is even now --- as always --- self\hyp{}realizing of an ever\hyp{}expanding arena of time\hyp{}space, and of time\hyp{}space\hyp{}transcended, meanings, an arena of changing relationships wherein energy\hyp{}matter is being progressively subjected to the overcontrol of living and divine spirit through the experiential striving of living and personal mind.
 \vs p042 10:2 The universal nonspiritual energies are reassociated in the living systems of non\hyp{}Creator minds on various levels, certain of which may be depicted as follows:
 \vs p042 10:3 \ublistelem{1.}\bibnobreakspace \bibemph{Preadjutant\hyp{}spirit minds.} This level of mind is nonexperiencing and on the inhabited worlds is ministered by the Master Physical Controllers. This is mechanical mind, the nonteachable intellect of the most primitive forms of material life, but the nonteachable mind functions on many levels beside that of primitive planetary life.
