--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -404,6 +404,8 @@
   \providecommand{\authorfont}{\fontsize{11}{9}\bfseries\itshape}%
 }
 
+\newcommand{\subtitlefont}{\Large}
+
 \renewcommand{\author}[1]{\thispagestyle{empty}\begin{center}\authorfont\textcolor{ubdarkblue}{#1}\end{center}\fancyhead[CE]{\bibheadfont\MakeUppercase{#1}}}
 
 \newcommand{\upartheader}[1]{%
