Enable fancy lettrine by default

--- a/urantia-study-edition.sty
+++ b/urantia-study-edition.sty
@@ -57,7 +57,7 @@
 %\tunemarkuptag{nofnt}
 
 % comment out to disable fancy lettrine letters
-%\tunemarkuptag{fancylettrine}
+\tunemarkuptag{fancylettrine}
 
 % comment out to disable Introduction
 \tunemarkuptag{introinclude}
