Revert 42:6.7 to the way it was in 1955 text. Based on Dr Chris Halvorson's notes on this place I have decided to revert "more" => "less".

--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -23,7 +23,7 @@ INTRODUCTION
 \bibemph{The British Study Edition of The Urantia Papers} has the following main features:
 
 \begin{itemize}
-\item The Standard Reference Text (SRT) of the Fifth Epochal Revelation has been used as a base of this work.
+\item The Standard Reference Text (SRT) of the Fifth Epochal Revelation has been used as a base of this work, with very few exceptions.
 \item All significant changes to the text (present also in SRT) are documented in the critical apparatus, together with a brief explanation of the reason for the change. To signify the presence of a textual variant, a circle is printed at the end of the affected word or paragraph, like this\r{}.
 \item Study notes have been added and are marked with an asterisk, like this\ts{*}.
 \item The symbol \pc\ marks the first paragraph in the group as in the 1955 first printing, where such groups were delimited by blank lines.
