--- a/tex/p042.tex
+++ b/tex/p042.tex
@@ -89,7 +89,7 @@
 \vs p042 6:4 \pc The ultimatons, unknown on Urantia, slow down through many phases of physical activity before they attain the revolutionary\hyp{}energy prerequisites to electronic organization. Ultimatons have three varieties of motion: mutual resistance to cosmic force, individual revolutions of antigravity potential, and the intraelectronic positions of the 100 mutually interassociated ultimatons.
 \vs p042 6:5 Mutual attraction holds 100 ultimatons together in the constitution of the electron; and there are never more nor less than 100 ultimatons in a typical electron. The loss of one or more ultimatons destroys typical electronic identity, thus bringing into existence one of the 10 modified forms of the electron.
 \vs p042 6:6 Ultimatons do not describe orbits or whirl about in circuits within the electrons, but they do spread or cluster in accordance with their axial revolutionary velocities, thus determining the differential electronic dimensions. This same ultimatonic velocity of axial revolution also determines the negative or positive reactions of the several types of electronic units. The entire segregation and grouping of electronic matter, together with the electric differentiation of negative and positive bodies of energy\hyp{}matter, result from these various functions of the component ultimatonic interassociation.
-\vs p042 6:7 \pc Each atom is a trifle over $2.54 \times 10^{-8}$ cm in diameter, while an electron weighs a little more\fnc{\textbf{more}, In 1955 text: \bibtextul{less}. \bibexpl{[For historical reference, the first discussion of the relative masses of the structural elements of atoms in the Encyclopaedia Britannica is found in its 11\ts{th} Edition (1910 / 1911) with revisions in the 12\ts{th} (1922). The calculation of the relative masses of the electron and the hydrogen atom was undergoing a rapid evolution just prior to the writing of The Urantia Book, the ratio being 1:1700 in 1897; 1:2000 in 1904; and 1:1845 by 1922. This last ratio is also the one quoted in the 1934 Websters.] The revised wording is consistent with the statement in the paragraph following the subject paragraph \bibref[42:6.8]{p042 6:8} in the text where the author states that a proton is “eighteen hundred times as heavy as an electron;” and is also in general agreement with current scientific opinion which places the ratio at about 1:1836. After the committee’s work, this item, plus the closely-related following item, are the only recommended changes that do not have a straightforward typographical explanation.}} than 1/2,000\ts{th} of the smallest atom, hydrogen. The positive proton, characteristic of the atomic nucleus, while it may be no larger than a negative electron, weighs from 2,000 to 3,000 times more.
+\vs p042 6:7 \pc Each atom is a trifle over $2.54 \times 10^{-8}$ cm in diameter, while an electron weighs a little less than 1/2,000\ts{th} of the smallest atom, hydrogen. The positive proton, characteristic of the atomic nucleus, while it may be no larger than a negative electron, weighs from 2,000 to 3,000 times more.
 \vs p042 6:8 \pc If the mass of matter should be magnified until that of an electron equalled 3\,g, then were size to be proportionately magnified, the volume of such an electron would become as large as that of the earth. If the volume of a proton --- 1,800 times as heavy as an electron --- should be magnified to the size of the head of a pin, then, in comparison, a pin’s head would attain a diameter equal to that of the earth’s orbit around the sun.
 \usection{7.\bibnobreakspace Atomic Matter}
 \vs p042 7:1 The formation of all matter is on the order of the solar system. There is at the centre of every minute universe of energy a relatively stable, comparatively stationary, nuclear portion of material existence. This central unit is endowed with a threefold possibility of manifestation. Surrounding this energy centre there whirl, in endless profusion but in fluctuating circuits, the energy units which are faintly comparable to the planets encircling the sun of some starry group like your own solar system.
