--- a/tex/p000.tex
+++ b/tex/p000.tex
@@ -30,7 +30,7 @@
 \vs p000 1:21 \ublistelem{2.}\bibnobreakspace Absolute perfection in some phases and relative perfection in all other aspects.
 \vs p000 1:22 \ublistelem{3.}\bibnobreakspace Absolute, relative, and imperfect aspects in varied association.
 \vs p000 1:23 \ublistelem{4.}\bibnobreakspace Absolute perfection in some respects, imperfection in all others.
-\vs p000 1:24 \ublistelem{5.}\bibnobreakspace Absolute perfection in no direction, relative perfection in all\fnc{\textbf{all}, In 1955 text: all other.} manifestations.
+\vs p000 1:24 \ublistelem{5.}\bibnobreakspace Absolute perfection in no direction, relative perfection in all other manifestations.
 \vs p000 1:25 \ublistelem{6.}\bibnobreakspace Absolute perfection in no phase, relative in some, imperfect in others.
 \vs p000 1:26 \ublistelem{7.}\bibnobreakspace Absolute perfection in no attribute, imperfection in all.
 \usection{2.\bibnobreakspace God}
