Corrected misuse of \bibref macro

--- a/tex/p053.tex
+++ b/tex/p053.tex
@@ -8,7 +8,7 @@
 \vs p053 1:3 Lucifer is now the fallen and deposed Sovereign of Satania. Self\hyp{}contemplation is most disastrous, even to the exalted personalities of the celestial world. Of Lucifer it was said: “Your heart was lifted up because of your beauty; you corrupted your wisdom because of your brightness.” Your olden prophet saw his sad estate when he wrote: “How are you fallen from heaven, O Lucifer, son of the morning! How are you cast down, you who dared to confuse the worlds!”
 \vs p053 1:4 Very little was heard of Lucifer on Urantia owing to the fact that he assigned his first lieutenant, Satan, to advocate his cause on your planet. Satan was a member of the same primary group of Lanonandeks but had never functioned as a System Sovereign; he entered fully into the Lucifer insurrection. The “devil” is none other than Caligastia, the deposed Planetary Prince of Urantia and a Son of the secondary order of Lanonandeks. At the time Michael was on Urantia in the flesh, Lucifer, Satan, and Caligastia were leagued together to effect the miscarriage of his bestowal mission. But they signally failed.
 \vs p053 1:5 Abaddon was the chief of the staff of Caligastia. He followed his master into rebellion and has ever since acted as chief executive of the Urantia rebels. Beelzebub was the leader of the disloyal midway creatures who allied themselves with the forces of the traitorous Caligastia.
-\vs p053 1:6 \pc The dragon eventually became the symbolic representation of all these evil personages. Upon the triumph of Michael, “Gabriel came down from Salvington and bound the dragon (all the rebel leaders) for an age.”\fnst{\textbf{“\ldots\ bound the dragon (all the rebel leaders) for an age.”} We must not forget, however, the following verse, \bibref{Rev 20:3}, which reads “\ldots\ and after that he must be loosed a little season.”} Of the Jerusem seraphic rebels it is written: “And the angels who kept not their first estate but left their own habitation, he has reserved in sure chains of darkness to the judgment of the great day.”
+\vs p053 1:6 \pc The dragon eventually became the symbolic representation of all these evil personages. Upon the triumph of Michael, “Gabriel came down from Salvington and bound the dragon (all the rebel leaders) for an age.”\fnst{\textbf{“\ldots\ bound the dragon (all the rebel leaders) for an age.”} We must not forget, however, the following verse, (Rev~20:3), which reads “\ldots\ and after that he must be loosed a little season.”} Of the Jerusem seraphic rebels it is written: “And the angels who kept not their first estate but left their own habitation, he has reserved in sure chains of darkness to the judgment of the great day.”
 \usection{2.\bibnobreakspace The Causes of Rebellion}
 \vs p053 2:1 Lucifer and his first assistant, Satan, had reigned on Jerusem for more than 500,000 years when in their hearts they began to array themselves against the Universal Father and his then vicegerent Son, Michael.
 \vs p053 2:2 There were no peculiar or special conditions in the system of Satania which suggested or favoured rebellion. It is our belief that the idea took origin and form in Lucifer’s mind, and that he might have instigated such a rebellion no matter where he might have been stationed. Lucifer first announced his plans to Satan, but it required several months to corrupt the mind of his able and brilliant associate. However, when once converted to the rebel theories, he became a bold and earnest advocate of “self\hyp{}assertion and liberty.”
